# processos_webcrawler

./: .gitignore  pyproject.toml  teste.html
src/: __init__.py  app.py  checker.py  date_funcs.py
src/models/: processo.py
tests/: test_date_funcs.py  test_processo_model.py
