[tool.poetry]
name = "processos-webcrawler"
version = "0.1.0"
description = ""
authors = ["lkaubs <221017050@aluno.unb.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
flask = "^3.1.0"
selenium = "^4.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
